Warehouse W1c: the DuckDB corpus lane gives the same verdicts through the warehouse
//spec:corpus_warehouse (manual) is :corpus_duckdb with every connection a
session on a warehouse the harness starts as a child process: host 2,472 /
107 and database 2,474 / 107, the same roster as in process (~52 s a pass
against ~35 s).

- API: a session reports its engine (name, version); describeOnly prepares a
  statement and reports its columns without running it.
- Driver: DatabaseMetaData from the session; a prepared statement's metadata
  before execution; precision, scale, nullability, signedness and class
  names as DuckDB's driver reports them (measured on 1.5.5.1, pinned by the
  differential).
- Core: a JSON cell decodes when the plan types the column JSON, not when the
  driver's object is named org.duckdb.JsonNode (the one red row, W1c's
  testAggToManyWithFilter). H2 gains the same test on its host judge; its
  three H2 rows move, each recorded in docs/GATES.md.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01JQPeHNYLgWBynpjev6K9D1